--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,21 +11,28 @@ a.active hr {
 * {
   font-family: Outfit;
 }
+
+html, body, #root {
+  @apply h-full w-full;
+}
+
 .prata-regular {
   font-family: "Prata", serif;
   font-weight: 400;
   font-style: normal;
 }
 
-::-webkit-scrollbar{
-  @apply hidden
+::-webkit-scrollbar {
+  @apply hidden;
 }
-@media (max-width:640px) {
-  a.active{
+
+@media (max-width: 640px) {
+  a.active {
     background-color: black;
-    color:white ;
+    color: white;
   }
 }
+
 .verify {
   animation: rotate 1s infinite;
 }
